<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AgileMath</string>
    <string name="new_game">Single Player</string>
    <string name="new_game_two_players">Multiplayer</string>
    <string name="profile">Player Profile</string>
    <string name="nickname">Nickname</string>
    <string name="save">Save</string>
    <string name="takepicture">Take Picture</string>
    <string name="avatar">Avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="_00000">00000</string>
    <string name="time">Time</string>
    <string name="_00">00</string>
    <string name="start_server_as_client">Connect to a server</string>
    <string name="start_as_server">Waiting For Players</string>
    <string name="button_cancel">Cancel</string>
    <string name="btn_emulator">Emulate</string>
    <string name="error_address">Invalid ip address</string>
    <string name="button_connect">Connect</string>
    <string name="ask_ip">Insert Ip</string>

    <string name="fr_level_transition_level">Level</string>
    <string name="fr_level_transition_starting_in">Starting in</string>
    <string name="fr_level_transition_btn_pause">Pause</string>

    <string name="exit_confirmation_message">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_highscores">All Highscores</string>
    <string name="my_scores">My Scores</string>
    <string name="options">Options</string>
    <string name="total_time">Total Time</string>
    <string name="scores">Scores</string>
    <string name="button_start">Start</string>

    <string name="popup_waiting_game_to_start">Waiting game to start</string>
    <string name="popup_min_players_required">To start the game you need at least one more player connected</string>
    <string name="popup_game_over_store_points">Game Over. Store points in firestore</string>

    <string name="fragment_level_finish">Waiting players to finish their level, before init the new level</string>
    <string name="fragment_game_over">Game over. You can follow the remaining players progress above</string>
    <string name="fragment_multiplayer_game_over">Multiplayer game ended.</string>
    <string name="instituto_superior_de_engenharia_de_coimbra">Instituto Superior de Engenharia de Coimbra</string>
    <string name="ano_letivo_2022_2023">Ano Letivo 2022/2023</string>
    <string name="unidade_curricular_de_arquiteturas_m_veis">Unidade Curricular de Arquiteturas Móveis</string>
    <string name="nome_da_aplica_o">Nome da Aplicação</string>
    <string name="desenvolvido_por">Desenvolvido Por:</string>
    <string name="credits">Credits</string>
</resources>