<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isec.agileMath.activities.MainMenuActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="55sp"
        android:textStyle="italic|bold" />

    <ImageView
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_gravity="top|center"
        android:layout_marginTop="200sp"
        android:background="@drawable/front_image"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:paddingHorizontal="42dp"
        android:paddingVertical="30dp">

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="openProfilePage"
            android:padding="20dp"
            android:text="@string/profile" />

        <Button
            android:id="@+id/btnHighestScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="openHighScores"
            android:padding="20dp"
            android:text="@string/all_highscores" />

        <Button
            android:id="@+id/btnMyScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="openMyScores"
            android:padding="20dp"
            android:text="@string/my_scores" />

    </LinearLayout>
</FrameLayout>

