<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="255dp"
            android:layout_height="255dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="250dp">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:contentDescription="@string/avatar"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar" />

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:src="@drawable/camera"
            android:id="@+id/btnTakePicture"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/takepicture"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/saveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:text="@string/save"
        android:layout_gravity="center_vertical" />


</LinearLayout>