<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreFragment">

    <LinearLayout
        android:gravity="center"
        android:paddingStart="20sp"
        android:paddingTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        tools:ignore="RtlSymmetry,UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/app_name"/>

        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/square">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_primary100"
                android:textStyle="bold"
                android:text="@string/score"/>
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_primary100"
                android:textStyle="bold"
                android:text="@string/_00000"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginStart="20sp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/square">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_primary100"
                android:textStyle="bold"
                android:text="@string/highscore"/>
            <TextView
                android:id="@+id/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/material_dynamic_primary100"
                android:textStyle="bold"
                android:text="@string/_00000"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>